Fix Three.js unclear edge render and dialog visibility

--- a/src/main.scss
+++ b/src/main.scss
@@ -93,6 +93,10 @@ label[for=collapse-btn] {
   }
 }
 
+.modal-body {
+  min-height: 60vh;
+}
+
 .preview {
   width: 18rem;
   height: 9rem;
